# wp-doctor

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yml  tests.yml
docs/: exemple-rapport.html  index.html
tests/: test_checks.py
wpdoctor/: __init__.py  audit.py  cli.py  http.py  models.py  report.py
wpdoctor/checks/: __init__.py  detect.py  performance.py  security.py  seo.py
